"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-10-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-11-PRS-08-10:
	  AST/expr.cc: => is not allowed with internal node definitions.
	  PRS_footprint's node-expr map restructured to encode direction, 
		so each unique node may be pulled in only one direction.
	  Added some tests, more pending test cases coming...


	* HACKT-00-01-04-main-00-81-74-ACT-01-11-PRS-08-09:
	  First working draft of internal nodes for cflat and hacprsim.
	  AST/expr.cc: prefix_expr::check_prs_expr():
		intercept negated internal node and flag accordingly.
	  Object/ref/simple_meta_dummy_reference.{h,tcc}:
		added dump_local to automatically infer owner scopespace
	  Object/lang/bool_literal.h: added negated member, only
		applicable to internal_nodes for direction.  
	  Added switch cases for PRS_NODE_TYPE_ENUM to cflat_printer and 
		hacprsim's ExprAlloc.
	  Let us celebrate with a round of adding test cases!


	* HACKT-00-01-04-main-00-81-74-ACT-01-11-PRS-08-08:
	  Object/lang/PRS_footprint.{h,cc}: implemented internal node
		expression map.  Map storage results in increase in 
		footprint object binary size, 
		so all affected create test dumps updated (~600).  
	  Object/lang/PRS_enum.h: added PRS_NODE_TYPE_ENUM.  
	  Next: negation of internal nodes on LHS needs to bind to the
		literal, instead of a conventional NOT expression, so when it
		appears on LHS the negatedness determines whether to 
		lookup the pull-up or pull-dn internal node definition.
		Adjustment may be kludgy...


2007-10-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-11-PRS-08-07:
	  meta_instance_reference_base: added unroll_resolve_copy
		which is a collection-independent resolver that just
		substitutes meta parameters and variables, 