@@ -3,4 +3,4 @@ Error building aggregate instance reference.  [6:1..5]
 Error: subreference of aggregate concatenations must be non-scalar.
 Error building aggregate instance reference.  [6:9..13]
 
-ERROR in the first item in alias-list.
+ERROR in the first item in alias-list.  [6:1..13]
