@@ -1,0 +1,9 @@
+Error: internal node `z' is used in the wrong sense.
+Error in sub-expression 0.
+Error resolving production rule expression at:
+Error unrolling production rule guard: 
+	@bogus::z | ~bogus::x | ~bogus::y -> bogus::w+
+Error instantiating process footprint: 
+From canonical type: bogus<>
+Error encountered during module::unroll.
+ERROR in creating.  Aborting.
