@@ -1,0 +1,16 @@
+// "internal-node-11.hac"
+// copy-modified from "internal-node-04.hac"
+// z should not be found as a bool
+// expect fail
+
+defproc bogus(bool x, y, w) {
+prs {
+	x & y		-> @z-
+	~@z & w		-> w-
+}
+	w = z;		// error: z is not a bool, 
+			// should not be found outside of prs context
+}
+
+bogus A;
+
