@@ -3,6 +3,17 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-10-06	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-74-ACT-01-11-PRS-08-11:
+	  Tackled some FINISH_ME's:
+	  AST/instance.cc: added position of error in alias list.
+	  Object/inst/dummy_placeholder.tcc: never-call diagnostic.
+	  Object/lang/PRS.cc: internal_node reference negation.
+		error message for failed lookup moved to bool_literal.
+	  Updated and added few new tests.  
+
+
 2007-10-05	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-74-ACT-01-11-PRS-08-10:
